# box2d-opt

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  test_parallel.sh
include/box2d-lite/: Arbiter.h  Body.h  CEMathUtils.h  MathUtils.h  SharedLock.h  World.h
samples/: CMakeLists.txt  main.cpp
src/: Arbiter.cpp  Body.cpp  CMakeLists.txt  Joint.cpp  World.cpp
tools/: graph.py  plot_cuerpos_x_ms.py  plot_ms_x_hilos.py
